stub framebuffer for use in kernel

--- a/loader/Makefile
+++ b/loader/Makefile
@@ -1,11 +1,17 @@
 ifndef BUILD_DIR
 	BUILD_DIR = build
 endif
+CC = gcc
+CXX = g++
 SUB_BUILD_DIR = ${BUILD_DIR}/loader
 SRC_DIR = src
-OBJECTS = ${SUB_BUILD_DIR}/loader.o ${SUB_BUILD_DIR}/kmain.o
+OBJECTS = ${SUB_BUILD_DIR}/loader.o      \
+		  ${SUB_BUILD_DIR}/kmain.o       \
+		  $(SUB_BUILD_DIR)/framebuffer.o
 CFLAGS = -m32 -nostdlib -nostdinc -fno-builtin -fno-stack-protector \
-	     -nostartfiles -nodefaultlibs -Wall -Wextra -Werror -c
+	     -nostartfiles -nodefaultlibs -Wall -Wextra -Werror -c -std=c11
+CXXFLAGS = -m32 -nostdlib -nostdinc -fno-builtin -fno-stack-protector \
+	       -nostartfiles -nodefaultlibs -Wall -Wextra -Werror -c -std=c++20
 LDFLAGS = -T link.ld -melf_i386
 ASSEMBLER = nasm
 ASSEMBLER_FLAGS = -f elf
@@ -25,10 +31,13 @@ $(SUB_BUILD_DIR): $(BUILD_DIR)
 kernel.elf: $(OBJECTS)
 	ld $(LDFLAGS) $(OBJECTS) -o $(SUB_BUILD_DIR)/kernel.elf
 
+$(SUB_BUILD_DIR)/%.o: $(SRC_DIR)/%.cpp
+	$(CXX) $(CXXFLAGS) $< -o $@
+
 $(SUB_BUILD_DIR)/%.o: $(SRC_DIR)/%.c
 	$(CC) $(CFLAGS) $< -o $@
 
-$(SUB_BUILD_DIR)/%.o: $(SRC_DIR)/%.s
+$(SUB_BUILD_DIR)/%.o: $(SRC_DIR)/%.asm
 	$(ASSEMBLER) $(ASSEMBLER_FLAGS) $< -o $@
 
 clean:
