--- a/.github/workflows/asm-c-cpp.yml
+++ b/.github/workflows/asm-c-cpp.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: ilammy/setup-nasm@v1
     - uses: actions/checkout@v4
     - name: make
       run: make
