--- a/kernel_core/Makefile
+++ b/kernel_core/Makefile
@@ -1,5 +1,16 @@
 BUILD_DIR ?= build
 
+################################################################################
+# Mandatory modules
+
+SRC_DIR = src
+FRAMEBUFFER_SRC_DIR = framebuffer
+LOADER_SRC_DIR = loader
+ASSEMBLY_WRAPPER_SRC_DIR = assembly_wrappers
+GLOBAL_INCLUDES := $(ASSEMBLY_WRAPPER_SRC_DIR)/include
+
+################################################################################
+
 CC = gcc
 CXX = g++
 SUB_BUILD_DIR = ${BUILD_DIR}/kernel_core
@@ -8,22 +19,14 @@ OBJECTS = ${SUB_BUILD_DIR}/kernel_core.o   \
 		  ${SUB_BUILD_DIR}/io.o            \
 		  $(SUB_BUILD_DIR)/framebuffer.o
 CFLAGS = -m32 -nostdlib -nostdinc -fno-builtin -fno-stack-protector \
-	     -nostartfiles -nodefaultlibs -Wall -Wextra -Werror -c -std=c11
+	     -nostartfiles -nodefaultlibs -Wall -Wextra -Werror -c -std=c11 \
+		 -I $(GLOBAL_INCLUDES)
 CXXFLAGS = -m32 -nostdlib -nostdinc -fno-builtin -fno-stack-protector \
-	       -nostartfiles -nodefaultlibs -Wall -Wextra -Werror -c -std=c++20
+	       -nostartfiles -nodefaultlibs -Wall -Wextra -Werror -c -std=c++20 \
+		   -I $(GLOBAL_INCLUDES)
 LDFLAGS = -T link.ld -melf_i386
 ASSEMBLER = nasm
 ASSEMBLER_FLAGS = -f elf
-
-################################################################################
-# Mandatory modules
-
-SRC_DIR = src
-FRAMEBUFFER_SRC_DIR = framebuffer
-LOADER_SRC_DIR = loader
-ASSEMBLY_WRAPPER_SRC_DIR = assembly_wrappers
-
-################################################################################
 
 .PHONY: BUILD_DIR SUB_BUILD_DIR
 
