add bochs run stage to build script

--- a/architecture/x86/bochs.config
+++ b/architecture/x86/bochs.config
@@ -2,7 +2,7 @@ megs:            32
 display_library: sdl2
 romimage:        file=/usr/local/share/bochs/BIOS-bochs-latest
 vgaromimage:     file=/usr/local/share/bochs/VGABIOS-lgpl-latest
-ata0-master:     type=cdrom, path=osOS.iso, status=inserted
+ata0-master:     type=cdrom, path=zig-out/x86/osOS.iso, status=inserted
 boot:            cdrom
 log:             bochslog.txt
 clock:           sync=realtime, time0=local
