--- a/.github/workflows/zigbuild.yml
+++ b/.github/workflows/zigbuild.yml
@@ -20,8 +20,9 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-    - name: Build Kernel
+    - uses: actions/checkout@v4
     - uses: mlugg/setup-zig@v1
       with:
         version: master
+    - name: Build Kernel
       run: zig build
