--- a/.github/workflows/zigbuild.yml
+++ b/.github/workflows/zigbuild.yml
@@ -26,10 +26,27 @@ jobs:
         version: master
     - name: Build Kernel
       run: zig build --summary all
+    - name: Upload Built Docs
+      if: os.matrix == 'ubuntu-latest'
+      uses: actions/upload-artifact@v4
+      with:
+        name: docs
+        path: ./zig-out/docs/x86
+
+  deploy:
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Unstash Docs
+      uses: actions/download-artifact@v4
+      with:
+        name: docs
+        path: ./docs
     - name: Deploy to GH Pages
       uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        publish_dir: zig-out/docs/x86
+        publish_dir: ./docs
         force_orphan: true
         exclude_assets: '.github'
