try deploying with gh action token

--- a/.github/workflows/zigbuild.yml
+++ b/.github/workflows/zigbuild.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Deploy to GH Pages
       uses: peaceiris/actions-gh-pages@v4
       with:
-        github_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./docs
         force_orphan: true
         exclude_assets: '.github'
