update bochs paths

--- a/entry_points/x86/bochs.config
+++ b/entry_points/x86/bochs.config
@@ -1,7 +1,7 @@
 megs:            32
 display_library: sdl2
-romimage:        file=/usr/local/share/bochs/BIOS-bochs-latest
-vgaromimage:     file=/usr/local/share/bochs/VGABIOS-lgpl-latest
+romimage:        file=/usr/local/bin/bochs/share/bochs/BIOS-bochs-latest
+vgaromimage:     file=/usr/local/bin/bochs/share/bochs/VGABIOS-lgpl-latest.bin
 ata0-master:     type=cdrom, path=zig-out/x86/osOS.iso, status=inserted
 boot:            cdrom
 log:             bochslog.txt
