--- a/.github/workflows/zigbuild.yml
+++ b/.github/workflows/zigbuild.yml
@@ -23,8 +23,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: mlugg/setup-zig@v2
       with:
-        version: master
-        use-cache: false
+        version: 0.15.2
     - name: Build Kernel
       run: zig build --summary all
     - name: Upload Built Docs
