--- a/.github/workflows/zigbuild.yml
+++ b/.github/workflows/zigbuild.yml
@@ -26,6 +26,10 @@ jobs:
         version: 0.15.2
     - name: Build Kernel
       run: zig build --summary all
+    - name: Unit Test
+      # Don't be wasteful with CI resources, unit tests on one agent is enough
+      if: matrix.os == 'ubuntu-latest'
+      run: zig build test --summary all
     - name: Upload Built Docs
       if: matrix.os == 'ubuntu-latest'
       uses: actions/upload-artifact@v4
