--- a/.github/workflows/zigbuild.yml
+++ b/.github/workflows/zigbuild.yml
@@ -24,8 +24,8 @@ jobs:
     - uses: mlugg/setup-zig@v2
       with:
         version: 0.15.2
-    - name: Build Kernel
-      run: zig build --summary all
+    - name: Build Kernel & Docs for all targets
+      run: zig build all --summary all
     - name: Unit Test
       # Don't be wasteful with CI resources, unit tests on one agent is enough
       if: matrix.os == 'ubuntu-latest'
