--- a/.github/workflows/zigbuild.yml
+++ b/.github/workflows/zigbuild.yml
@@ -25,10 +25,10 @@ jobs:
       with:
         version: 0.15.2
     - name: Build Kernel & Docs for all targets
-      run: zig build kernel -Darch=x86 --summary all
-           zig build kernel -Darch=riscv32 --summary all
-           zig build kernel -Darch=x86 -Dbootloader=limine --summary all
-           zig build kernel -Darch=riscv32 -Dbootloader=limine --summary all
+      run: zig build kernel -Darch="x86" --summary all
+           zig build kernel -Darch="riscv32" --summary all
+           zig build kernel -Darch="x86" -Dbootloader="limine" --summary all
+           zig build kernel -Darch="riscv32" -Dbootloader="limine" --summary all
            zig build docs --summary all
     - name: Unit Test
       # Don't be wasteful with CI resources, unit tests on one agent is enough
